--- a/service-report-generator.html
+++ b/service-report-generator.html
@@ -137,7 +137,7 @@
         <h2>Service Details</h2>
         <div class="form-group">
             <label for="service-type">Service Type</label>
-            <select id="service-type">
+            <select id="service-type" onchange="toggleChecklists()">
                 <option value="">Select Service Type</option>
                 <option value="Maintenance Visit">Maintenance Visit</option>
                 <option value="Breakdown Visit">Breakdown Visit</option>
@@ -235,6 +235,7 @@
         const { jsPDF } = window.jspdf;
 
         function toggleChecklists() {
+            const serviceType = document.getElementById('service-type').value;
             const equipmentType = document.getElementById('equipment-type').value;
             const checklists = [
                 'cctv-checklist',
@@ -245,7 +246,7 @@
             checklists.forEach(checklist => {
                 document.getElementById(checklist).style.display = 'none';
             });
-            if (equipmentType) {
+            if (equipmentType && (serviceType === 'Maintenance Visit' || checklist === `${equipmentType.toLowerCase().replace(/ & /g, '-').replace(/ /g, '-')}-checklist`)) {
                 document.getElementById(equipmentType.toLowerCase().replace(/ & /g, '-').replace(/ /g, '-') + '-checklist').style.display = 'block';
             }
         }
@@ -346,10 +347,9 @@
             y = doc.lastAutoTable.finalY + 5;
 
             // Checklist
-            const serviceType = document.getElementById('service-type').value;
             const equipmentType = document.getElementById('equipment-type').value;
             let checklistItems = [];
-            if (equipmentType === 'CCTV' && serviceType === 'Maintenance Visit') {
+            if (equipmentType === 'CCTV') {
                 checklistItems = [
                     ['Cameras Live', document.getElementById('cameras-live').checked ? 'Yes' : 'No'],
                     ['Playback Working', document.getElementById('playback-working').checked ? 'Yes' : 'No'],
