--- a/service-report-generator.html
+++ b/service-report-generator.html
@@ -272,7 +272,7 @@
             doc.setFont('Helvetica', 'normal');
             doc.text('No.36/80, Medavakkam Main Road, Keelkattalai', 10, 20);
             doc.text('Chennai, Tamil Nadu 600113', 10, 24);
-            doc.text('Phone: +91916218229 | Email: eyetecsecurities@gmail.com', 10, 28);
+            doc.text('Phone: +91916218229 | Email: support@eyetechsecurities.in', 10, 28);
 
             // Title
             doc.setFontSize(14);
@@ -452,7 +452,7 @@
             doc.setTextColor(255, 255, 255);
             doc.setFont('Helvetica', 'normal');
             doc.text('Eye Tech Securities | No.36/80, Medavakkam Main Road, Keelkattalai, Chennai, Tamil Nadu 600113', 10, 280);
-            doc.text('Phone: +91916218229 | Email: eyetecsecurities@gmail.com | www.eyetecsecurities.in', 10, 287);
+            doc.text('Phone: +91916218229 | Email: support@eyetechsecurities.in | www.eyetechsecurities.in', 10, 287);
 
             // Save the PDF
             doc.save('Service_Report.pdf');
