--- a/index.html
+++ b/index.html
@@ -986,6 +986,7 @@
             <div class="flex justify-center gap-4 mb-6">
                 <a href="index.html" class="btn-primary text-center">AMC Agreement</a>
                 <a href="service-report-generator.html" class="btn-secondary text-center">Service Report</a>
+                <a href="quotation.html" class="btn-secondary text-center">Quotation</a>
             </div>
 
             <form id="amc-form">
