--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
             <!-- Added navigation links between AMC and Service Report -->
             <div class="flex justify-center gap-4 mb-6">
                 <a href="index.html" class="btn-primary text-center">AMC Agreement</a>
-                <a href="service-report-generator.html" class="btn-secondary text-center">Service Report</a>
+                <a href="service-report-generator.html" class="btn-primary text-center">Service Report</a>
                 <a href="quotation.html" class="btn-primary text-center">Quotation</a>
             </div>
 
